--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,17 @@
 	  	<base href="/" target="">
     	<title></title>
     	<link rel='stylesheet' href='/stylesheets/style.css' />
-    	
+		
+		<link rel="stylesheet" type="" href="/libs/bootstrap/dist/css/bootstrap.min.css">
 		
 		<script src="/libs/angular/angular.min.js"></script>
     	<script src="/libs/angular-route/angular-route.min.js"></script>
+    	<script src="/libs/angular-animate/angular-animate.min.js"></script>
+    	<script src="/libs/angular-bootstrap/ui-bootstrap.min.js"></script>
+		<script src="/libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+		
+
+		
 		
 		<script src="/app.modules.js"></script>
     	<script src="/app.js"></script>
