--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,3 +1,29 @@
-<div class="container">
-    <h1>Hello World</h1>
+<div class="box">
+    <div id="header">
+        <div id="cont-lock" style="text-align: center;padding-top: 5px;color: #fafafa;font-size: 3em;">
+            <i class="fa fa-sign-in"></i></div>
+        <div id="bottom-head">
+            <h1>Login</h1>
+        </div>
+    </div>
+    <form action="" method="post">
+        <div class="group">
+            <input class="input-material" type="text" required>
+            <span class="highlight"></span>
+            <span class="bar"></span>
+            <label>Username</label>
+        </div>
+        <div class="group">
+            <input class="input-material" type="password" required>
+            <span class="highlight"></span>
+            <span class="bar"></span>
+            <label>Password</label>
+        </div>
+        <button type="submit" ng-click="login()">Login</button>
+    </form>
+    <div id="footer-box" style="padding-top: 15px;">
+        <p style="text-align:center;"><span style="color:#999">Not a member?</span>
+            <a href="/signup"><span class="sign-up"> Sign up now</span></a>
+        </p>
+    </div>
 </div>
