--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,11 @@
 	<base href="/" target="">
 	<title></title>
 
-	<link rel="stylesheet" type="" href="/libs/bootstrap/dist/css/bootstrap.min.css">
 
+	<link rel="stylesheet" type="" href="/libs/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/libs/components-font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/libs/angular-toastr/dist/angular-toastr.min.css">
+	<link rel="stylesheet" href="/stylesheets/style.css">
 	<script src="/bundle.min.js"></script>
 
 </head>
@@ -33,27 +36,5 @@
 
 	</footer>
 </body>
-
-<style>
-	body {
-		background-color: #fafafa;
-	}
-
-	.navbar-default {
-		background-color: #009688;
-		border-radius: 0;
-		color: #fafafa;
-		box-shadow: 0px 0px 5px rgba(0, 0, 0, .5);
-		border-color: #009688;
-	}
-
-	.navbar-brand {
-		color: #fafafa !important;
-	}
-
-	.navbar-default .navbar-nav>li>a {
-		color: #fafafa;
-	}
-</style>
 
 </html>
